...
        singleLine = true,
        shape = CircleShape,
        modifier =
            modifier
                .padding(8.dp)
                .fillMaxWidth()
                .testTag("search_input"),
    )
}

@ExperimentalMaterial3Api
@Composable
fun SearchResultsList(
...
        contentPadding = contentPadding,
        modifier = Modifier.imePadding()
    ) {
        items(list) { result ->
            SearchListCard(
                item = result,
                modifier = Modifier.testTag("search_result_card")
            ) {
                onClick(result)
            }
        }
    }
}
...
