...
}

@Composable
fun CastListPlaceholder() {
    LazyRow(
        modifier = Modifier
            .testTag("cast_loading")
            .fillMaxWidth()
            .padding(horizontal = 16.dp, vertical = 8.dp)
            .shimmer(),
    ) {
        items(5) {
            Column(
...
