...
            modifier = Modifier.padding(8.dp),
        ) {
            items(list) { show ->
                ListPosterCard(
                    itemName = show.name,
                    itemUrl = show.originalImage,
                    modifier = Modifier.testTag("show_item"),
                ) {
                    onClick(show)
                }
            }
        }
    }
...
